tests/baselines/reference/invalidThrowStatement.errors.txt
==== tests/cases/conformance/statements/throwStatements/invalidThrowStatement.ts (2 errors) ====
    throw; 
         ~
!!! error TS1109: Expression expected.
    
    export throw null;
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
    